# minidlna

./: .gitignore  CMakeLists.txt  README.md  albumart.cpp  albumart.h  avahi.cpp  clients.cpp  clients.h  codelength.h  config.h.in  containers.cpp  containers.h  event.h  getifaddr.cpp  getifaddr.h  icons.cpp  image_utils.cpp  image_utils.h  kqueue.cpp  libav.h  log.cpp  log.h  metadata.cpp  metadata.h  minidlna.conf.local  minidlna.cpp  minidlna.h  minidlna_service.cpp  minidlna_service.h  minidlnapath.h  minidlnatypes.h  minissdp.cpp  minissdp.h  minixml.cpp  minixml.h  monitor.cpp  monitor.h  monitor_inotify.cpp  monitor_kqueue.cpp  options.cpp  (+37 more)
.github/workflows/: cmake-multi-platform.yml
tagutils/: tagutils-aac.c  tagutils-aac.h  tagutils-asf.c  tagutils-asf.h  tagutils-dff.c  tagutils-dff.h  tagutils-dsf.c  tagutils-dsf.h  tagutils-flc.c  tagutils-misc.c  tagutils-mp3.c  tagutils-mp3.h  tagutils-ogg.c  tagutils-pcm.c  tagutils-plist.c  tagutils-wav.c  tagutils.cpp  tagutils.h
